change file name

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Hirav Vachhrajani</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/LinkedIn Photo.jpeg" alt="" /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/LinkedIn Cropped Photo.jpg" alt="" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -31,8 +31,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#coursework">Certifications & Coursework</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#cssi">Civic & Social Service Internship</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Extra-Curricular</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Extra-Curricular</a></li>                    
                 </ul>
             </div>
         </nav>
@@ -49,11 +48,11 @@
                         9543 University Terrace Dr #A · Charlotte, NC 28262 · (980) 585-7746 ·
                         <a href="mailto:name@email.com">hiravvachhrajani@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Line to express urself</p>
+                    <p class="lead mb-5">A hard-working individual with a series of experiences and projects across domains like Logistics, Supply Chain, Marketing and Operations which helped me to gain applied knowledge, employing Data Visualization and Business Analytics Tools. </p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/hirav-vachhrajani/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://www.instagram.com/hirav12345/"><i class="fab fa-instagram"></i></a>
-                        <a class="social-icon" href="https://www.facebook.com/hirav.vachhrajani"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/hirav-vachhrajani/"  target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.instagram.com/hirav12345/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/hirav.vachhrajani" target="_blank"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
@@ -67,11 +66,11 @@
                             <h3 class="mb-0">Summer Inventory Manager</h3>
                             <div class="subheading mb-3">Housing & Residence Life at UNC Charlotte</div>
                             <l>Task:</l>
-                            <p>I was a Summer Maintenance Assistant at Housing & Residence Life at UNC Charlotte. I was the student incharge of the inventory and I had to track the incoming and the outgoing inventory and record it on the database. As an incharge, I had to know the stock available in the inventory for the furniture that is provided in the residential halls at UNC Charlotte, the housekeeping stock and the elctrical and hardware stock and had to be replenished when needed.</p>
+                            <p>I am a Summer Maintenance Assistant at Housing & Residence Life at UNC Charlotte. I am the student incharge of the inventory and I have to track the incoming and the outgoing inventory and record it on the database. As an incharge, I have to know the stock available in the inventory for the furniture that is provided in the residential halls at UNC Charlotte, the housekeeping stock and the elctrical and hardware stock and have to be replenished when needed.</p>
                             <l>Outcome:</l>
-                            <p>After the completion of this tenure, I inculcated multicultural working habits and my communincation skills, anaytical thinking and problem solving abilities were further developed. I could also learn the inventory optimisation and purchasing as a part of the inventory management. And above everything, I learned time management and enhanced my managerial skills.</p>
+                            <p>After the completion of this tenure, I will inculcate multicultural working habits and my communincation skills, anaytical thinking and problem solving abilities would be developed further. I am learning the inventory optimisation and purchasing as a part of the inventory management. And above everything, I learned time management and enhanced my managerial skills.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">May 2020 - August 2020</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2020 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -80,7 +79,7 @@
                             <l>Task:</l>
                             <p>The company focuses on developing the logic and the network and incorporating the same in a Programmable Logic Controller (PLC) as per the client's requirements. They also provide on-site service for the installed the Servo Motors and Servo Drives used in the Pharmaceutical Machinery. My task was to incorporate the newer version of OMRON servo motors and drives with Bachman PLCs. So I had to develop the network and code for the PLC which can be configured with the OMRON Drives using Sysmac Studio.</p>
                             <l>Outcome:</l>
-                            <p>This internship gave me the first industrial experience and I could learn how to face the clients and I could successfully do the analytical thinking and problem solving and the project could be completed within the given deadline. I learned how to work as a team in the corporate world. I gained the technical hands-on experience for coding on the PLCs.</p>
+                            <p>This internship gave me the first industrial experience and I could learn how to face the clients and I could successfully do the analytical thinking and problem solving and the project could be completed within the given deadline. I learned how to work as a team in the corporate world and gained the technical hands-on experience for coding on the PLCs.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2019 - May 2019</span></div>
                     </div>
@@ -89,11 +88,22 @@
                             <h3 class="mb-0">Intern</h3>
                             <div class="subheading mb-3">Swati Switchgears (India) Pvt. Ltd.</div>
                             <l>Task:</l>
-                            <p>Observed and learned the designing and Manufacturing of Switchgear Protection Panels of various sizes and purposes.</p>
+                            <p>I had to observe and learn the designing and Manufacturing of Switchgear Protection Panels of various sizes and purposes.</p>
                             <l>Outcome:</l>
-                            <p></p>
+                            <p>Apart from designing and manufacturing of the Switchgear Protection Panels, I also the learned about the various clients and how the business deals are done.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2018 - July 2018</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Civic & Social Service Internship</h3>
+                            <div class="subheading mb-3">Apang Manav Mandal (Community for differently-abled people)</div>
+                            <l>Task:</l>
+                            <p>I was responsible teaching Mathematics and English to students in Grades 9 and 10. Also, help them solve the doubts of other subjects.</p>
+                            <l>Outcome:</l>
+                            <p>This internship gave me the leadership and mentoring experience and the good deeds of helping the differently-abled people.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2019 - May 2019</span></div>
                     </div>
                     </div>
             </section>
@@ -212,42 +222,53 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
                     <ul>
-                         <li>
-                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Supply Chain Management Strategies from Industry Leading Enterprises, UNCC
-                            <p>Analyzed and understood the strategies of the leading companies’ SCM in various industries</p>
-                         </li>
-                         <li>
-                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Dependancy on Shipping Logistics, UNCC
-                            <p>Studied how the company or country depends on shipping logistics and Supply Chain for trade. Find the problems in few big companies and figure out the solutions of the same.</p>
-                         </li>
-                         <li>
-                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Business Model of Gaming Lounge, PDPU
-                            <p>Developed an entire business model including the financial analysis (financial investment estimates, financial returns for 6years, breakeven point achievement, profits), market survey, site selection and other required calculations and theoretical presentation of starting a business.</p>    
-                         </li>
-                         <li>
-                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Working Model of a Toy Car using a Supercapacitor, PDPU
-                            <p>Developed a toy car model coded with help of Arduino which runs with the Bluetooth driver. Used the Super capacitor as the voltage source rather than a battery as super capacitor can charge very quickly and discharge slowly.</p>    
-                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <strong>Supply Chain Management Strategies from Industry Leading Enterprises, UNCC</strong>
+                        <p>Analyzed and understood the strategies of the leading companies’ SCM in various industries</p>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <strong>Dependancy on Shipping Logistics, UNCC</strong>
+                        <p>Studied how the company or country depends on shipping logistics and Supply Chain for trade. Find the problems in few big companies and figure out the solutions of the same.</p>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <strong>Business Model of Gaming Lounge, PDPU</strong>
+                        <p>Developed an entire business model including the financial analysis (financial investment estimates, financial returns for 6 years, breakeven point achievement, profits), market survey, site selection and other required calculations and theoretical presentation of starting a business.</p>    
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <strong>Working Model of a Toy Car using a Supercapacitor, PDPU</strong>
+                        <p>Developed a toy car model coded with help of Arduino which runs with the Bluetooth driver. Used the Super capacitor as the voltage source rather than a battery as super capacitor can charge very quickly and discharge slowly.</p>    
+                        </li>
                     </ul>
                 </div>
             </section>
-            <!-- Civic & Social Service Internship-->
-            <section class="resume-section" id="cssi">
+            <section class="resume-section" id="coursework">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Civic and Social Service Internship</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <strong> Apang Manav Mandal (Community for differently-abled people)</strong>
-                            <p>Responsible for teaching Mathematics and English to students in grades 9 and 10.</p> 
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">June 2016 - July 2016</span></div>
-                    </div>
+                    <h2 class="mb-5">Certifications and Coursework</h2>
+                    <ul>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Coursework in Entrepreneurship & Business Plan Formulation 
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Certified in Power BI by LinkedIn Learning 
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Cerified in Microsoft Excel by LinkedIn Learning
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Certified in Basics of Programmable Logic Controllers (PLCs) by Siemens
+                        </li>
+                    </ul>
                 </div>
-            </section>            
+            </section>
+            <hr class="m-0" /> 
             <!-- Extra Curricular-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
