--- a/index3.html
+++ b/index3.html
@@ -49,7 +49,7 @@
                         9543 University Terrace Dr #A · Charlotte, NC 28262 · (980) 585-7746 ·
                         <a href="mailto:name@email.com">hiravvachhrajani@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Line to express urself</p>
+                    <p class="lead mb-5">A hard-working individual with a series of experiences and projects across domains like Logistics, Supply Chain, Data Analysis, Demand Planning, Marketing and Operations which helped to gain applied knowledge, employing Data Visualization and Business Analytics Tools.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/hirav-vachhrajani/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/hirav12345/"><i class="fab fa-instagram"></i></a>
@@ -64,14 +64,25 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Summer Inventory Manager</h3>
+                            <h3 class="mb-0">Supply Chain Operations Analyst</h3>
+                            <div class="subheading mb-3">India Wire Industries</div>
+                            <l>Task:</l>
+                            <p>As a part time, temporary employee, I had to coordinate with the senior and do the data analysis, forecast the data and dashboard for Key Performance Indices using Data Visualization tools like Power BI and Tableau. </p>
+                            <l>Outcome:</l>
+                            <p>As a result of this experience, I could achieve the hands-on experience at the industrial level and could practically learn the usage of Data Visualization tools for KPIs and find the problems and solutions to the defects in the Manufacturing Process and Supply Chain. Thus, I gained the practical, industrial level of expertise for most of the concepts and courses learned theoretically.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2020 - January 2021</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Inventory Assistant</h3>
                             <div class="subheading mb-3">Housing & Residence Life at UNC Charlotte</div>
                             <l>Task:</l>
-                            <p>I was a Summer Maintenance Assistant at Housing & Residence Life at UNC Charlotte. I was the student incharge of the inventory and I had to track the incoming and the outgoing inventory and record it on the database. As an incharge, I had to know the stock available in the inventory for the furniture that is provided in the residential halls at UNC Charlotte, the housekeeping stock and the elctrical and hardware stock and had to be replenished when needed.</p>
+                            <p>I was a Maintenance Assistant at Housing & Residence Life at UNC Charlotte. I was the student incharge of the inventory and I had to track the incoming and the outgoing inventory and record it on the database. As an incharge, I had to know the stock available in the inventory for the furniture that is provided in the residential halls at UNC Charlotte, the housekeeping stock and the elctrical and hardware stock and had to be replenished when needed.</p>
                             <l>Outcome:</l>
                             <p>After the completion of this tenure, I inculcated multicultural working habits and my communincation skills, anaytical thinking and problem solving abilities were further developed. I could also learn the inventory optimisation and purchasing as a part of the inventory management. And above everything, I learned time management and enhanced my managerial skills.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">May 2020 - August 2020</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2020 - October 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -84,18 +95,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2019 - May 2019</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Intern</h3>
-                            <div class="subheading mb-3">Swati Switchgears (India) Pvt. Ltd.</div>
-                            <l>Task:</l>
-                            <p>Observed and learned the designing and Manufacturing of Switchgear Protection Panels of various sizes and purposes.</p>
-                            <l>Outcome:</l>
-                            <p></p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">June 2018 - July 2018</span></div>
-                    </div>
-                    </div>
+                 </div>
             </section>
             <hr class="m-0" />
             <!-- Education-->
@@ -107,8 +107,8 @@
                             <h3 class="mb-0">University of North Carolina at Charlotte</h3>
                             <div class="subheading mb-3">Master's of Science</div>
                             <div>Engineering Management</div>
-                            <p>GPA: 3.47/4.00</p>
-                            <p><strong>Coursework:</strong> Lean Supply Networks, Logistics Engineering & Management, Forecasting Techniques, Methods and Practices, Fundamentals of Engineering Management, Deterministic System Analysis, Stochastic System Analysis</p>
+                            <p>GPA: 3.60/4.00</p>
+                            <p><strong>Coursework:</strong> Lean Supply Networks, Logistics Engineering & Management, Forecasting Techniques, Methods and Practices, Total Quality Systems, Production Control Systems, Marketing Management, Fundamentals of Engineering Management, Deterministic System Analysis, Stochastic System Analysis</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2019 - May 2021</span></div>
                     </div>
@@ -118,7 +118,7 @@
                             <div class="subheading mb-3">Bachelor's of technology</div>
                             <div>Electrical Engineering</div>
                             <p>GPA: 3.02/4.00</p>
-                            <p><strong>Coursework:</strong> Economics, Organizational Psychology, Microprocessors, Advanced MicroControllers & Embedded Systems, Control Systems, Power Electronics, Renewable Energy Engineering, Power Systems, Electrical Machine Design</p>
+                            <p><strong>Coursework:</strong> Economics, Organizational Psychology, Microprocessors, Embedded Systems, Control Systems</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2015 - May 2019</span></div>
                     </div>
@@ -129,7 +129,7 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages</div>
+                    <div class="subheading mb-3">Programming</div>
                     <ul>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -153,12 +153,20 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
+                            MATLAB using C language
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
                             Programmable Logic Controllers (PLCs)
                         </li>
                         <p></p>
                     </ul>
-                    <div class="subheading mb-3">Tools</div>
+                    <div class="subheading mb-3">Softwares and Tools</div>
                     <ul>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Microsoft Office
+                        </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Advanced Microsoft Excel
@@ -187,14 +195,6 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Sysmac Studio
                         </li>
-                    </ul>
-                    <p></p>
-                    <div class="subheading mb-3">Operating Systems</div>
-                    <ul>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Microsoft Office
-                        </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Microprocessors
@@ -203,8 +203,7 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Advanced Microcontrollers & Embedded Systems 
                         </li>
-                    </ul>
-                </div>
+                     </div>
             </section>
             <hr class="m-0" />
             <!-- Projects-->
@@ -212,7 +211,22 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
                     <ul>
-                         <li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                               Data Analysis for Cadmach Machinery Pvt. Ltd.
+                               <p>Conducted the Data Analysis and Visualization on Microsoft Power BI for the Sales Department and in turn relating it with the other departments of a leading pharmaceutical company, Cadmach Machinery Pvt Ltd.</p>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                               Defect Analysis of ECBs using SPC for Quality Management, UNCC
+                               <p>Analyzed the dataset for the defects in Electric Circuit Boards using Statistical Process Control using the Quality tools and techniques to reach the standard quality for a manufacturing company</p>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                               Container and Chasis Optimization of Motor Carriers for Direct Chasislink Inc.
+                               <p>Minimize the total travel distance for the Logistics company and do the analysis and optimization of the containers and the chasis for Direct Chasislink company and mathematical modeling to optimize the distance travelled and cost and forecasting the demand with different techniques</p>
+                        </li>
+                        <li>
                          <span class="fa-li"><i class="fas fa-check"></i></span>
                             Supply Chain Management Strategies from Industry Leading Enterprises, UNCC
                             <p>Analyzed and understood the strategies of the leading companies’ SCM in various industries</p>
@@ -223,18 +237,59 @@
                             <p>Studied how the company or country depends on shipping logistics and Supply Chain for trade. Find the problems in few big companies and figure out the solutions of the same.</p>
                          </li>
                          <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                               Working Model of a Toy Car using a Supercapacitor, PDPU
+                               <p>Developed a toy car model coded with help of Arduino which runs with the Bluetooth driver. Used the Super capacitor as the voltage source rather than a battery as super capacitor can charge very quickly and discharge slowly.</p>    
+                         </li>
+                         <li>
                          <span class="fa-li"><i class="fas fa-check"></i></span>
                             Business Model of Gaming Lounge, PDPU
                             <p>Developed an entire business model including the financial analysis (financial investment estimates, financial returns for 6years, breakeven point achievement, profits), market survey, site selection and other required calculations and theoretical presentation of starting a business.</p>    
                          </li>
-                         <li>
-                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Working Model of a Toy Car using a Supercapacitor, PDPU
-                            <p>Developed a toy car model coded with help of Arduino which runs with the Bluetooth driver. Used the Super capacitor as the voltage source rather than a battery as super capacitor can charge very quickly and discharge slowly.</p>    
-                         </li>
                     </ul>
                 </div>
             </section>
+            <!--Certificates and Coursework-->
+            <section class="resume-section" id="coursework">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Certifications and Coursework</h2>
+                    <ul>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Coursework in Entrepreneurship & Business Plan Formulation 
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Coursework in Decision & Risk Analysis 
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Coursework in Lean Six Sigma  
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Certified in Power BI by LinkedIn Learning 
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Cerified in Microsoft Excel by LinkedIn Learning
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Certified in Basics of Programmable Logic Controllers (PLCs) by Siemens
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Certified in SQL Training by LinkedIn Learning 
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Certified in SAP by LinkedIn Learning 
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <hr class="m-0" /> 
             <!-- Civic & Social Service Internship-->
             <section class="resume-section" id="cssi">
                 <div class="resume-section-content">
@@ -268,6 +323,10 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Member of University Level Cricket and Volleyball Team at PDPU 
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Volunteering at Love Birds (NGO)
                         </li>
                     </ul>
                 </div>
